--- a/Dicee/pubspec.yaml
+++ b/Dicee/pubspec.yaml
@@ -1,4 +1,4 @@
-name: iamrich
+name: dicee
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -59,7 +59,14 @@ flutter:
   uses-material-design: true
 
   assets:
-    - images/
+     - images/dice1.png
+     - images/dice2.png
+     - images/dice3.png
+     - images/dice4.png
+     - images/dice5.png
+     - images/dice6.png
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
