--- a/xylophone/pubspec.yaml
+++ b/xylophone/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
+  english_words: ^4.0.0
+  audioplayers: ^6.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
